# vk-profiles-rs

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: build-win-linux.yml  build.yml
examples/: basic_setup.rs  change_features.rs  check_profile_properties.rs
libvulkanprofiles/: CMakeLists.txt  vulkan_profiles.cpp
libvulkanprofiles/include/vulkan/: vulkan_profiles.h  vulkan_profiles.hpp
src/: enum_debugs.rs  lib.rs  prelude.rs  profiles.rs  vp.rs
