[package]
name = "vk-profiles-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The profiles library requires the vulkan loader to be statically linked
ash = {version="0.37.0", features=["linked", "debug"]}

[build-dependencies]
cmake = "0.1.48"