[package]
name = "vk-profiles-rs"
description = "Rust bindings for the vulkan profiles library"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CodingRays/vk-profiles-rs"
readme = "README.md"

[dependencies]
# The profiles library requires the vulkan loader to be statically linked
ash = {version="0.37.0", features=["linked"]}
link-cplusplus = "1.0.6"

[build-dependencies]
cmake = "0.1.48"

[features]
default = ["debug"]
# Whether vulkan profiles structs should implement Debug
debug = ["ash/debug"]
docs-rs = []

[package.metadata.docs.rs]
features = ["debug", "docs-rs"]