[package]
name = "vk-profiles-rs"
description = "Rust bindings for the Vulkan Profiles library"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CodingRays/vk-profiles-rs"
readme = "README.md"
keywords = ["vulkan", "bindings"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
]

[dependencies]
# The profiles library requires the vulkan loader to be statically linked
ash = {version="0.38.0", features=["linked"]}
link-cplusplus = "1.0.6"

[build-dependencies]
cc = "1.2.56"

[features]
default = ["debug"]
# Whether vulkan profiles structs should implement Debug
debug = ["ash/debug"]
docs-rs = []

[package.metadata.docs.rs]
features = ["debug", "docs-rs"]
